<resources>
    <string name="app_name">Call Reader</string>

    <string name="custom_message">Custom Message</string>
    <string name="custom_message_summary">Prefix before contact name</string>

    <string name="enable_call_reader">Enable Call Reader</string>
    <string name="enable_call_reader_summary">Enable or disable CallReader to speak contact name on incoming calls</string>

    <string name="ignore_already_oncall">Ignore on Active Call</string>
    <string name="ignore_already_oncall_summary">Suppress CallReader on already active Call</string>

    <string name="language">Language</string>
    <string name="call_reader_voice_language">Select the CallReader Speech Language</string>

    <string name="test_speech">Test Speech</string>
    <string name="test_speech_summary">Play/Pause Speech Test Toggle</string>

    <string name="name">Developed By</string>
    <string name="email">k3n / kiran.nk@yuown.com</string>
    <string name="logs">Logs</string>
    <string name="read_logs">Read Logs</string>
</resources>
